--- a/style.css
+++ b/style.css
@@ -793,9 +793,7 @@ html {
 /* advisor container section start -------*/
 .dsbp_advisor {
   width: 100%;
-  height: 90vh;
-  padding-bottom: 40px;
-  position: relative;
+  padding: 60px 0;
   background-color: #f0f3f6;
 }
 .dsbp_advisor h2 {
@@ -806,11 +804,10 @@ html {
   margin-bottom: 40px;
 }
 .dsbp_advisor .advisor_container {
-  position: absolute;
-  /* top: 50%; */
+  position: relative;
   left: 50%;
   transform: translateX(-50%);
-  width: 38%;
+  width: 50%;
   height: auto;
   padding-bottom: 20px;
   border-radius: 5px;
