--- a/style.css
+++ b/style.css
@@ -28,11 +28,11 @@ html {
   width: 100%;
   height: 58px;
   z-index:222;
+  top: 0;
   background-color: #F0F3F6; 
   position: fixed;
   display: none;
 }
-
 
 .main_header .navbar {
   display: flex;
