--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,16 @@
+@media (max-width: 2048px) {
+    .container{
+        max-width: 95%;
+        margin: auto;
+    }
+}
+@media (max-width: 1648px) {
+    .container{
+        max-width: 90%;
+        margin: auto;
+    }
+}
+
 @media (max-width: 990px) {
     .container{
         max-width: 90%;
@@ -211,6 +224,9 @@
     .program_highlight{
         width: 100%;
         /* display: none; */
+    }
+    .program_highlight .info h2{
+        padding-top: 0;
     }
     .program_highlight .col_flex{
         display: grid;
