--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ html {
   padding: 5px 0;
 }
 .top_header img {
+  width: 35%;
   height: 100%;
 }
 .main_header {
@@ -77,31 +78,31 @@ html {
 .banner .left_col {
   margin-top: 32px;
 }
-.left_col .data_bootcamp a {
+.banner .left_col .data_bootcamp a {
   color: #000;
   font-size: 16px;
   position: relative;
   margin-right: 15px;
 }
-.left_col .data_bootcamp a::after {
+.banner .left_col .data_bootcamp a::after {
   position: absolute;
   content: "/";
   margin-left: 5px;
 }
-.left_col .data_bootcamp span {
+.banner .left_col .data_bootcamp span {
   color: #51565e;
 }
-.left_col .data_info {
+.banner .left_col .data_info {
   padding-top: 52px;
 }
-.left_col .data_info h1 {
+.banner .left_col .data_info h1 {
   font-size: 32px;
   line-height: 48px;
 }
-.left_col .data_info .rating {
+.banner .left_col .data_info .rating {
   margin-top: 20px;
 }
-.left_col .data_info .rating p {
+.banner .left_col .data_info .rating p {
   font-size: 16px;
   color: #18191b;
   padding: 4px 10px;
@@ -115,14 +116,14 @@ html {
   color: #ffbb0c;
   margin: 0 5px;
 }
-.left_col .data_info p {
+.banner .left_col .data_info p {
   margin-top: 14px;
   line-height: 30px;
   font-size: 16px;
   font-weight: 400;
   color: #51565e;
 }
-.left_col .data_info .data_btn a {
+.banner .left_col .data_info .data_btn a {
   display: block;
   margin-top: 32px;
   padding: 10px 0;
@@ -133,6 +134,7 @@ html {
 }
 .banner .right_col {
   width: 100%;
+
 }
 
 .banner .right_col img {
@@ -423,6 +425,7 @@ html {
 /* our alumni section start */
 .our_alumni{
   width: 100%;
+  padding: 40px 0;
 }
 .our_alumni h2{
   font-size: 32px;
@@ -431,15 +434,14 @@ html {
 }
 .card_section {
   width: 100%;
-  height: 520px;
   margin: auto;
   position: relative;
 }
-.swiper {
+.card_section .swiper {
   width: 100%;
 }
 
-.card {
+.card_section .card {
   position: relative;
   background: #fff;
   border-radius: 10px;
@@ -447,16 +449,17 @@ html {
   box-shadow: 0 0px 10px #ccc;
 }
 
-.card .card-content {
+.card_section .card .card-content {
   display: flex;
-  height: 450px;
+  height:  400px;
   flex-direction: column;
   align-items: center;
   position: relative;
+  padding-bottom: 20px;
   z-index: 100;
 }
 
-.card .card-content .overlay {
+.card_section .card .card-content .overlay {
   width: 100%;
   height: 70px;
   border-radius: 10px 10px 0 0;
@@ -475,47 +478,48 @@ html {
 .card_section .card .image a img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
   border-radius: 50%;
   border: 3px solid #fff;
 }
 
-.card-content .card_info {
+.card_section .card-content .card_info {
   margin-top: 20px;
   text-align: center;
-  padding: 0 30px;
+  padding: 0 10px;
+  height: 230px;
+  overflow: hidden;
 }
 
-.card-content .card_info h3 {
+.card_section .card-content .card_info h3 {
   font-size: 24px;
   /* color: #18191b; */
   margin-bottom: 10px;
 }
-.card-content .card_info .span {
+.card_section .card-content .card_info .span {
   margin-bottom: 20px;
   font-size: 16px;
   font-weight: 400;
 }
-.card-content .card_info p {
-  font-size: 16px;
+.card_section .card-content .card_info p {
+  font-size: 14px;
   line-height: 24px;
 }
 
-.swiper-pagination-bullet {
+.card_section .swiper-pagination-bullet {
   height: 7px;
   width: 26px;
   border-radius: 25px;
   background: white;
 }
 
-.swiper-button-next,
-.swiper-button-prev {
+.card_section .swiper-button-next,
+.card_section .swiper-button-prev {
   opacity: 0.7;
   color: #ff6c0c;
   transition: all 0.3s ease;
 }
-.swiper-button-next:hover,
-.swiper-button-prev:hover {
+.card_section .swiper-button-next:hover,
+.card_section .swiper-button-prev:hover {
   opacity: 1;
   color: #ff6c0c;
 }
