--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ html {
   padding: 5px 0;
 }
 .top_header img {
-  width: 35%;
-  height: 100%;
+  width: 40%;
+  height: 60px;
 }
 .main_header {
   width: 100%;
